model realase