@@ -5,8 +5,14 @@ import java.sql.DriverManager;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.Statement;
+import java.util.ArrayList;
+import java.util.List;
 
 public class REDatabase {
+	public static void main(String[] args) {
+		REDatabase.init();
+	}
+	
 	private static final String HOST = "127.0.0.1";
 	private static final int PORT = 3306;
 	private static final String DATABASE_NAME = "RSSEditor";
@@ -67,10 +73,59 @@ public class REDatabase {
 		s.close();
 		return r;
 	}
+	
+	private RSSItem resultSetToRSSItem(ResultSet rs) throws SQLException {
+		int channelID = rs.getInt("channelID");
+		String sql = "SELECT * FROM channels WHERE channelID = " + channelID + ";";
+		ResultSet rs1 = executeSelectSQL(sql);
+		if(rs.getFetchSize() == 0) {
+			throw new IllegalArgumentException("No channel use id " + channelID);
+		}
+		RSSChannel channel = new RSSChannel(rs1.getString("name"), rs1.getString("link"), rs1.getString("logoPath"), rs1.getString("description"), rs1.getString("generator"), rs1.getString("webMaster"),
+				rs1.getString("language"), rs1.getDate("lastBuildDate"));
+		return new RSSItem(channel, rs.getString("title"), rs.getString("description"), rs.getDate("dateCreated"), rs.getString("author"), rs.getString("link"));
+	}
+	
+	public RSSChannel selectChannelByChannelID(int channelID) throws SQLException {
+		String sql = "SELECT * FROM channels WHERE channelID = " + channelID + ";";
+		ResultSet rs = executeSelectSQL(sql);
+		if(rs.getFetchSize() == 0) {
+			throw new IllegalArgumentException("No channel use id " + channelID);
+		}
+		 RSSChannel channel = new RSSChannel(rs.getString("name"), rs.getString("link"), rs.getString("logoPath"), rs.getString("description"), rs.getString("generator"), rs.getString("webMaster"),
+				rs.getString("language"), rs.getDate("lastBuildDate"));
+		 for(RSSItem item: selectItemFromChannel(channel)) {
+			 channel.addItem(item);
+		 }
+		 return channel;
+	}
+	
+	public List<RSSItem> selectItemAll() throws SQLException{
+		List<RSSItem> allItems = new ArrayList<RSSItem>();
+		String sql = "SELECT * FROM items;";
+		ResultSet rs = executeSelectSQL(sql);
+		for(int i = 0; i < rs.getFetchSize(); ++i) {
+			allItems.add(resultSetToRSSItem(rs));
+			rs.next();
+		}
+		return allItems;
+	}
+	
+	public List<RSSItem> selectItemFromChannel(RSSChannel channel) throws SQLException {
+		List<RSSItem> items = new ArrayList<RSSItem>();
+		String sql = "SELECT * FROM items WHERE channelID=" + channel.getId() + ";";
+		ResultSet rs = executeSelectSQL(sql);
+		for(int i = 0; i < rs.getFetchSize(); ++i) {
+			items.add(resultSetToRSSItem(rs));
+			rs.next();
+		}
+		return items;
+	}
 
 	public void insertItem(RSSItem item) throws SQLException {
+			
 			String sql="INSERT INTO items VALUES ("
-					+ "uuid(),"
+					+ item.getChannel().getId()+","
 					+ item.getTitle()+","
 					+ item.getDescription()+","
 					+ item.getLink()+","
@@ -84,7 +139,7 @@ public class REDatabase {
 	public void insertChannel(RSSChannel channel) throws SQLException {
 		String sql="INSERT INTO channnels VALUES ("
 				+ "uuid(),"
-				+ channel.getTitle()+","
+				+ channel.getName()+","
 				+ channel.getDescription()+","
 				+ channel.getLink()+","
 				+ channel.getGenerator()+","
@@ -92,7 +147,7 @@ public class REDatabase {
 				+ channel.getLogoPath()+","
 				+ channel.getLanguage()+","
 				+ channel.getLastBuildDate() + ","
-				+ channel.isLink() +","
+				+ channel.isLike() +","
 				+")";
 		executeInsertSQL(sql);
 	}
@@ -132,17 +187,18 @@ public class REDatabase {
 					+ "logoPath = '"+channel.getLogoPath()+"',"
 					+ "language = '"+channel.getLanguage()+"',"
 					+ "lastBuildDate = "+channel.getLastBuildDate()+","
-					+ "isLike = "+channel.isLink()+","
+					+ "isLike = "+channel.isLike()+","
 					+" WHERE name ='"+channel.getName()+"'";
 			executeUpdateSQL(sql);
 	}
 
 	public void updateLabel(RSSLabel label) throws SQLException {
-		ArrayList<RSSChannel> list=label.getChannelList();
+		List<RSSChannel> list=label.getChannelList();
 		for(int i=0 ; i<list.size() ; ++i) {
 			RSSChannel channel = list.get(i);
 			String select = "SELECT channelID FROM channels WHERE name='"+channel.getName()+"'";
-			int channelID = executeSelectSQL(select);
+			ResultSet rs = executeSelectSQL(select);
+			int channelID = rs.getInt(0);
 			String sql="UPDATE labels SET "
 				+ "label ='"+label.getName()+"' "
 				+ "WHERE channelID="+channelID;
@@ -156,15 +212,20 @@ public class REDatabase {
 		executeRemoveSQL(sql);
 	}
 
-	public void removeChannel(String channel) throws SQLException {
+	public boolean removeChannel(String channel) throws SQLException {
 		String selectChannelID = "SELECT channelID FROM channels WHERE name='"+channel+"'";
-		int channelID=executeSelectSQL(selectChannelID);
-		String delItem = "DELETE FROM items WHERE in channelID="+channelID;
-		String delLab = "DELETE FROM labels WHERE in channelID="+channelID;
-		String delCha="DELETE FROM channels WHERE name='"+channel+"'";
+		ResultSet rs = executeSelectSQL(selectChannelID);
+		if(rs.getRow() == 0) {
+			return false;
+		}
+		int channelID = rs.getInt(0);
+		String delItem = "DELETE FROM items WHERE channelID="+channelID;
+		String delLab = "DELETE FROM labels WHERE channelID="+channelID;
+		String delCha = "DELETE FROM channels WHERE channelID="+channelID;
 		executeRemoveSQL(delItem);
 		executeRemoveSQL(delLab);
 		executeRemoveSQL(delCha);
+		return true;
 		
 	}
 
@@ -177,7 +238,7 @@ public class REDatabase {
 		String sql = "CREATE TABLE IF NOT EXISTS channels\n"
 				+ "(\n"
 				+ "channelID integer NOT NULL PRIMARY KEY,\n"
-				+ "name varchar(50) NOT NULL PRIMARY KEY,\n"
+				+ "name varchar(50) NOT NULL,\n"
 				+ "description varchar(2000),\n"
 				+ "link varchar(255),\n"
 				+ "generator varchar(255),\n"
@@ -194,7 +255,8 @@ public class REDatabase {
 		String sql = "CREATE TABLE IF NOT EXISTS labels\n"
 				+ "(\n"
 				+ "label varchar(50) NOT NULL,\n"
-				+ "channelID integer NOT NULL FOREIGN KEY REFERENCES channels(channelID)\n"
+				+ "channelID integer NOT NULL,\n"
+				+ "FOREIGN KEY (channelID) REFERENCES channels(channelID)\n"
 				+ ");";
 		executeCreateSQL(sql);
 	}
@@ -202,20 +264,24 @@ public class REDatabase {
 	private void createItemTable() throws SQLException {
 		String sql = "CREATE TABLE IF NOT EXISTS items\n"
 				+ "(\n" 
-				+ "channelID integer FOREIGN KEY REFERENCES channels(channelID) PRIMARY KEY,\n"
+				+ "channelID integer PRIMARY KEY,\n"
 				+ "title varchar(50),\n"
 				+ "description varchar(2000),\n"
 				+ "link varchar(255),\n"
 				+ "pubDate date,\n"
 				+ "author varchar(255),\n"
-				+ "hasRead tinyint\n"
+				+ "hasRead tinyint,\n"
+				+ "FOREIGN KEY (channelID) REFERENCES channels(channelID)\n"
 				+ ");";
 		executeCreateSQL(sql);
 	}
 
-	public REDatabase(String host, int port, String databaseName, String username, String password) throws Exception {
-		Class.forName("com.mysql.jdbc.Driver").newInstance();
+	private REDatabase(String host, int port, String databaseName, String username, String password) throws Exception {
+		Class.forName("com.mysql.cj.jdbc.Driver").getDeclaredConstructor().newInstance();
 		con = DriverManager.getConnection("jdbc:mysql://" + host + ":" + port + "/" + databaseName, username, password);
+		createChannelTable();
+		createLabelTable();
+		createItemTable();
 		System.out.println("Successfully connected to mysql");
 	}
 
